# umfeld-libraries

./: .gitmodules  README.md
daisysp/: CMakeLists.txt
daisysp/examples/daisysp-basic/: CMakeLists.txt  daisysp-basic.cpp
daisysp/src/: UmfeldDaisySP.cpp  UmfeldDaisySP.h
gpio-linux/: CMakeLists.txt  README.md  library.properties
gpio-linux/examples/gpio-example/: CMakeLists.txt  application.cpp
gpio-linux/src/: gpio-linux.cpp  gpio-linux.h
gpio-linux/test/: main.cpp
imgui/: CMakeLists.txt  README.md
imgui/examples/font/: CMakeLists.txt  font.cpp
imgui/examples/imgui-demo/: CMakeLists.txt  application.cpp  imgui-demo.cpp
imgui/examples/imgui-website/: CMakeLists.txt  imgui-website.cpp
imgui/examples/imgui-website-examples/: CMakeLists.txt  application.cpp  imgui-website-examples.cpp
imgui/examples/minimal/: CMakeLists.txt  application.cpp  minimal.cpp
imgui/examples/umgebung-imgui/: CMakeLists.txt  umgebung-imgui.cpp
imgui/examples/umgebung-imgui-cmake/: CMakeLists.txt
imgui/include/: UmfeldImGui.h  UmgebungImGui.h
ollama/: CMakeLists.txt  README.md  library.json  library.properties
ollama/examples/response/: CMakeLists.txt  response.cpp
ollama/examples/response-arduino/: CMakeLists.txt  response-arduino.ino
ollama/src/: UmfeldOllama.cpp  UmfeldOllama.h  UmgebungOllama.cpp  UmgebungOllama.h
opencv/: CMakeLists.txt  README.md
opencv/examples/opencv-work-in-progress/: CMakeLists.txt  umfeld-opencv.cpp
opencv/examples/umfeld-opencv(WIP)/: CMakeLists.txt  umfeld-opencv.cpp
opencv/include/: UmfeldOpenCV.h
opencv/src/: UmfeldOpenCV.cpp  UmfeldOpenCV.h  UmgebungOpenCV.cpp
